fix: remove margin on mobile

--- a/src/styles/components/_find-player.scss
+++ b/src/styles/components/_find-player.scss
@@ -82,18 +82,3 @@
         font-size: $font-size-large;
     }
 }
-
-
-@media (max-width: $desktop-breakpoint) {
-    .player-general-info__content {
-        flex-direction: column;
-    }
-
-    .player-general-info__image-tag {
-        justify-content: center;
-    }
-
-    .player-stats-container__row {
-        flex-direction: column;
-    }
-}
